discussion/kv_engine/173718/173718_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51805: Pass persistedPrepareSeqno(maxPrepareSeqno) to CkptMgr

We will set the value of the first Checkpoint to this value in a
future change to ensure that the on disk state is correctly updated
if we partially persist a snapshot, restart, and find on streaming
the rest of the snapshot that it does not contain any prepares.

Change-Id: Icc3f1b431c0458005420dfe5c07822128b853c0e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-04-14 16:42:21.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-14 18:25:47.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16723/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16723/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16723/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45337/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38082/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15651/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18500/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19538/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18836/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26904/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17595/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6437/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6375/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-06-21 07:33:07.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
